[tool.poetry]
name = "asciisnake"
version = "0.1.0"
description = ""
authors = ["k01e-01 <k01e.alm07@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
keyboard = "^0.13.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
